updated text on home page. tweaked some styles to try to get the MD elements to align correctly (known bug with MD) added a watch method to the location service so we will raise an event if poistion changes. Still need to hook the controller to this.

--- a/moon-trees/src/app/components/locator/locator.component.less
+++ b/moon-trees/src/app/components/locator/locator.component.less
@@ -1,3 +1,15 @@
-﻿.form{
-  width:100%;
+﻿.form {
+  width: 100%;
+}
+
+md-input-container {
+  margin-bottom: 12px;
+}
+
+h3, md-select, md-button {
+  margin-bottom: 0;
+
+  & > * {
+    margin-bottom: 0;
+  }
 }
