--- a/moon-trees/src/app/components/table/table.component.less
+++ b/moon-trees/src/app/components/table/table.component.less
@@ -2,3 +2,6 @@
   border: 2px solid gray;
   padding:4px;
 }
+md-spinner{
+  margin:0 auto;
+}
