--- a/moon-trees/src/styles.less
+++ b/moon-trees/src/styles.less
@@ -27,7 +27,3 @@ a:active {
     margin-right: 6px;
   }
 }
-/* Angular Google Maps*/
-agm-map {
-  height: 300px;
-}
